# tanomo

./: .replit  app.py  pyproject.toml  render.yaml  requirements.txt
instance/: orders.db
static/: style.css
templates/: admin_login.html  admin_top.html  app_config.html  done.html  order.html  order_management.html  password_change.html  product_register.html  sales_input.html  sales_prediction.html  user_top.html
